# graduate-design

./: .gitignore  FILE_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TE.py  ctwing_open_spec.txt
.claude/: settings.local.json
backend/: main.py  requirements.txt  seed_data.py
backend/app/api/: __init__.py  alarms.py  archives.py  control.py  devices.py  iot.py  operations.py  system.py  telemetry.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  alarm_service.py  archive_service.py  automation_service.py  control_service.py  (+4 more)
docs/: 2026-04-17.md  2026-04-20.md  API_DOCUMENTATION.md  FILE_MANIFEST.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY-2026-4-20.md  QUICKSTART.md  chapter4_system_design.docx  chapter4_system_design.md  chapter5_system_implementation.docx  chapter5_system_implementation.md  chapter6_system_testing.docx  chapter6_system_testing.md  chapter7_summary_outlook.docx  chapter7_summary_outlook.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
hardware/: CMakeLists.txt  iot_cloud.c  iot_cloud.h  main.c  relay_control.c  relay_control.h  sensor_driver.c  sensor_driver.h
hardware/demo/: .cproject  .gitignore  .mxproject  README.md  STM32CubeIDE 1.6.0.lnk  demo.ioc  demo.launch
hardware/demo/Core/Inc/: main.h  oled.h  stm32l4xx_it.h  usart.h
hardware/demo/Core/Src/: gpio.c  main.c  oled.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usart.c
tools/: README.md  serial_bridge.py
(+25 files in other folders)
